# COPM-IMS-test

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  my-project  output.txt  restored.txt
src/: archiver.cpp  archiver.h  main.cpp
